Made the boxes look cleaner and aligned. Fixed color issue of sidenav

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -58,53 +58,59 @@ padding: 0px
 /* Showcase */
 #showcase{
   min-height: 400px;
-  background:url('http://volteface.me/app/uploads/2017/02/Closeup_of_protesters_at_Ginowan_protests_2009-11-08.jpg') no-repeat;
+  /*background:url('http://volteface.me/app/uploads/2017/02/Closeup_of_protesters_at_Ginowan_protests_2009-11-08.jpg') no-repeat; */
+  background: url('http://i.imgur.com/o2XVmbT.jpg') no-repeat 0 -300px;
   background-size: cover;
   text-align:center;
   color:#fff;
 }
 
 #showcase h1{
-  margin-top:15px;
+  margin-top:5px;
+  padding-top: 50px;
   font-size:55px;
   margin-bottom:10px;
-  color:#000;
+  color:#fff;
   font-family:bromello;
 }
 
 #showcase p{
   font-size:20px;
-  color:#000;
+  color:#fff;
 }
 
 /* Boxes */
 #boxes{
   margin-top: 20px;
+  text-align: center;
 }
 
  #boxes .box{
-   float:left;
+   float: left;
    text-align:center;
-   width:30%;
+   width:400px;
    padding:10px;
+   height: 150px;
   }
 
   #boxes a{
     text-decoration: none;
+    text-align: center;
   }
 
-  #boxes a:link, a:visited{
+  #boxes a:link, #boxes a:visited{
     background-color:white;
     color: black;
-    border: 1px solid gray;
+  /*  border: 1px solid gray;*/
     text-align: center;
     text-decoration: none;
     display: inline-block;
   }
 
-  #boxes a:hover, a:active{
-    background-color: green;
+  #boxes a:hover, #boxes a:active{
+    background-color: #7f9ed1;
     color: white;
+    text-align: center;
   }
 
 /* footer */
